# resolute

./: README.md  core.21653  pyproject.toml  score_function.ipynb  score_function.py  score_function_3kPBMC.ipynb  score_function_neurons2000.ipynb  score_function_paul15.ipynb  token.txt
.ipynb_checkpoints/: score_function-checkpoint.ipynb  score_function_3kPBMC-checkpoint.ipynb  score_function_neurons2000-checkpoint.ipynb  score_function_paul15-checkpoint.ipynb  test_function_scZINZEN_dataset_by_Baptiste-checkpoint.ipynb
datasets/neurons_2000/filtered_gene_bc_matrices/mm10/: barcodes.tsv
paper/: paper.md
src/bachclue/: __init__.py  bachclue.py
src/bachclue/.ipynb_checkpoints/: __init__-checkpoint.py  bachclue-checkpoint.py
src/resolute/.ipynb_checkpoints/: __init__-checkpoint.py  resolute-checkpoint.py
tests/: score_function_3kPBMC.ipynb  score_function_baptiste_stage6.ipynb  score_function_neurons2000.ipynb
tests/.ipynb_checkpoints/: score_function_3kPBMC-checkpoint.ipynb  score_function_paul15-checkpoint.ipynb  test-checkpoint.py
