[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "RESOLUTE"
version = "1.0.0"
authors = [
  { name="Marco Uderzo", email="marco.uderzo@ens-lyon.fr" },
  { name="Sergio Sarnataro", email="sergio.sarnataro@ens-lyon.fr" }
]
description = "RESOLUTE is a Python package designed for selecting the optimal clustering resolution in Scanpy-based single-cell and spatial transcriptomics analyses, leveraging geometric metrics and topological stability evaluation."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { text = "GPL-3.0-or-later" }
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://gitbio.ens-lyon.fr/spatial-cell-id/resolute"